--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </div>
         
         <div class="uuid-info">
-            <small>Target UUID:</small><br>
-            12345678...
+            Target UUID:<br>
+            12345678-1234-1234-1234-1234567890ab
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1"></script>
 </body>
 </html>
