--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>M5Stack Connect Test</title>
+<title>M5Stack Lost Alert</title>
 <style>
   body { font-family: sans-serif; text-align: center; background: #f2f2f7; padding: 20px; }
   .container { background: white; padding: 30px; border-radius: 16px; margin: 0 auto; max-width: 400px; }
@@ -12,12 +12,14 @@
   button { width: 100%; padding: 15px; font-size: 16px; border: none; border-radius: 8px; margin-bottom: 10px; font-weight: bold; cursor: pointer; }
   #btn-connect { background: #3182ce; color: white; }
   #btn-disconnect { background: #e53e3e; color: white; opacity: 0.5; }
+  .alert-mode { background-color: #ffeaea; border: 2px solid red; }
+  .alert-text { color: red; font-weight: bold; }
 </style>
 </head>
 <body>
 
-<div class="container">
-    <h2>M5Stack 接続テスト</h2>
+<div class="container" id="main-container">
+    <h2>紛失防止タグ テスト</h2>
     
     <div class="status">
         <span id="circle" class="circle">🔴</span>
@@ -26,54 +28,76 @@
 
     <button id="btn-connect" onclick="connect()">接続する</button>
     <button id="btn-disconnect" onclick="disconnect()">切断する</button>
-
-    <p style="font-size:10px; color:#888;">Target: 12345678...</p>
 </div>
 
 <script>
- 
   const SERVICE_UUID = "12345678-1234-1234-1234-1234567890ab".toLowerCase();
 
   let device = null;
+  let isManualDisconnect = false;
 
   async function connect() {
-      // 1. まずボタンが生きているか確認のアラート
-      alert("接続を開始します！");
-
       try {
-          // 2. デバイスを探す
           device = await navigator.bluetooth.requestDevice({
               filters: [{ services: [SERVICE_UUID] }]
           });
 
-          // 3. 接続する
+          device.addEventListener('gattserverdisconnected', onDisconnected);
+
           const server = await device.gatt.connect();
 
-          // 4. 成功したら画面を変える
-          document.getElementById("circle").innerText = "🔵";
-          document.getElementById("text").innerText = "接続成功！";
-          document.getElementById("btn-connect").style.opacity = "0.5";
-          document.getElementById("btn-disconnect").style.opacity = "1.0";
+          updateUI(true);
+          isManualDisconnect = false;
 
-          alert("つながりました！");
+          alert("接続しました");
 
       } catch (e) {
-          // 失敗したらエラーを表示
-          alert("エラーが出ました:\n" + e);
+          alert(e);
       }
   }
 
   function disconnect() {
       if (device && device.gatt.connected) {
+          isManualDisconnect = true;
           device.gatt.disconnect();
+          updateUI(false);
+          alert("手動で切断しました");
+      }
+  }
+
+  function onDisconnected(event) {
+      if (isManualDisconnect) {
+          return;
+      }
+
+      document.getElementById("circle").innerText = "⚠️";
+      document.getElementById("text").innerText = "接続が切れました！";
+      document.getElementById("text").className = "alert-text";
+      document.getElementById("main-container").className = "container alert-mode";
+
+      alert("⚠️ 警告！ M5Stickとの接続が失われました！");
+      
+      setTimeout(() => {
+        updateUI(false);
+        document.getElementById("main-container").className = "container";
+        document.getElementById("text").className = "";
+      }, 1000);
+  }
+
+  function updateUI(isConnected) {
+      if (isConnected) {
+          document.getElementById("circle").innerText = "🔵";
+          document.getElementById("text").innerText = "接続中";
+          document.getElementById("btn-connect").style.opacity = "0.5";
+          document.getElementById("btn-disconnect").style.opacity = "1.0";
+      } else {
           document.getElementById("circle").innerText = "🔴";
           document.getElementById("text").innerText = "未接続";
           document.getElementById("btn-connect").style.opacity = "1.0";
           document.getElementById("btn-disconnect").style.opacity = "0.5";
-          alert("切断しました");
       }
   }
 </script>
 
 </body>
-</html> 
+</html>
