--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <button id="btn-connect" onclick="connect()">接続する</button>
-    <button id="btn-disconnect" onclick="disconnect()">切断する（手動）</button>
+    <button id="btn-disconnect" onclick="disconnect()">切断する</button>
 </div>
 
 <script>
