--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>紛失防止アプリ>ふんしつ>ふん
+<title>紛失防止アプリ</title>
 <style>
   body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; text-align: center; background: #f2f2f7; padding: 20px; }
   .container { background: white; padding: 30px; border-radius: 16px; margin: 0 auto; max-width: 400px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
